<resources>
    <string name="app_name">UAS_DPM_TI5A_Rebahan.Aj</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="ebahan_aj">ebahan.Aj</string>
    <string name="login">LOGIN</string>
    <string name="r">R</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_akun"><u>Daftar Akun</u></string>
    <string name="user1">User1</string>
    <string name="user111111_gmail_com">user111111@gmail.com</string>
    <string name="halaman_depan">Halaman Depan</string>
    <string name="tv_online_korea">TV Online Korea</string>
    <string name="drama_korea">Drama Korea</string>
    <string name="film_korea">Film Korea</string>
    <string name="drama_mendatang">Drama Mendatang</string>
    <string name="premium">Premium</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="v_1">V.1</string>
    <string name="riwayat_tontonan_saya">Riwayat Tontonan Saya</string>
    <string name="profil">profil</string>
    <string name="tbe">tbe</string>
    <string name="startup">startup</string>
    <string name="pent">pent</string>
    <string name="ionbo">ionbo</string>
    <string name="true_beauty_2020_episode_8">True Beauty (2020) Episode 8</string>
    <string name="start_up_2020_episode_the_end">Start-Up (2020) Episode - The End</string>
    <string name="its_okay_not_be_okay_2020_episode_01_16_end">Its Okay Not Be Okay (2020) Episode 01-16 End</string>
    <string name="the_penthouse_2020_episode_41_42_end">The Penthouse (2020) Episode 41-42 End</string>
    <string name="rebahan_aj">Rebahan.Aj</string>
</resources>